--- a/www/templates/config.html
+++ b/www/templates/config.html
@@ -1,5 +1,70 @@
 <ion-view view-title="Settings">
-    <ion-content>
-        <h1>Settings</h1>
+    <ion-content class=padding">
+
+        <div class="ionic-body active-preview" >
+            <div class="bar bar-header">
+                <div class="h1 title">(under construction)</div>
+                <div class="content has-header" style="width:100%">
+                    <ul class="list" >
+                        <li class="item item-toggle">notifications
+                            <label class="toggle">
+                                <input type="checkbox">
+                                <div class="track">
+                                    <div class="handle"></div>
+                                </div>
+                            </label>
+                        </li>
+                        <li class="item item-toggle">updates
+                            <label class="toggle">
+                                <input type="checkbox">
+                                <div class="track">
+                                    <div class="handle"></div>
+                                </div>
+                            </label>
+                        </li>
+                        <li class="item item-toggle">warnings
+                            <label class="toggle">
+                                <input type="checkbox">
+                                <div class="track">
+                                    <div class="handle"></div>
+                                </div>
+                            </label>
+                        </li>
+                        <li class="item item-toggle">favorites
+                            <label class="toggle">
+                                <input type="checkbox">
+                                <div class="track">
+                                    <div class="handle"></div>
+                                </div>
+                            </label>
+                        </li>
+                        <li class="item item-toggle">gps suggestions
+                            <label class="toggle">
+                                <input type="checkbox">
+                                <div class="track">
+                                    <div class="handle"></div>
+                                </div>
+                            </label>
+                        </li>
+                        <li class="item item-toggle">gps news
+                            <label class="toggle">
+                                <input type="checkbox">
+                                <div class="track">
+                                    <div class="handle"></div>
+                                </div>
+                            </label>
+                        </li>
+                        <li class="item item-toggle">customize
+
+                        </li>
+                        <li style="background-color: blueviolet; color: #ffffff; text-align: center; font-weight: bold;"
+                         class="item item-toggle">
+                            informations about each setting
+
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </ion-content>
 </ion-view>
