--- a/www/templates/geo.html
+++ b/www/templates/geo.html
@@ -2,7 +2,7 @@
     <ion-nav-bar class="bar-positive">
     <ion-nav-buttons>
         <button menu-toggle="left" class="button button-icon ion-navicon"></button>
-        <button class="button  button-balanced" ng-submit="myWeather()">GPS Forecast</button>
+        <button class="button  button-balanced" ng-click="myWeather()">GPS Meteo</button>
     </ion-nav-buttons>
     </ion-nav-bar>
 
