--- a/www/templates/infoMeteo.html
+++ b/www/templates/infoMeteo.html
@@ -1,19 +1,16 @@
-<ion-view view-title="{{meteo.city.name}}/{{meteo.city.country}} Infos Weather">
-    <ion-content class=padding">
+<ion-view view-title="Weather Infos">
+    <ion-content overflow-scroll="false" class=padding">
 
-     <div class="padding">
-         <label class="item-floating-label">Longitude: {{meteo.city.coord.lon}}</label>
-     </div>
-        <div class="padding">
-            <label class="item-floating-label">Latitude: {{meteo.city.coord.lat}}</label>
-        </div>
+
 
         <div class="list">
 
-            <a class="item item-avatar" href="#" ng-repeat="m in meteo.list">
+            <a class="item">City : {{meteo.city.name}} ({{meteo.city.country}})</a>
+            <a class="item item-avatar"  ng-repeat="m in meteo.list">
                 <img src="img/{{m.weather[0].main}}.png">
-                <h2 >{{m.dt*1000|date:'EEEE yy-dd-MM  HH:mm'}}</h2>
-                <p><strong>{{m.main.temp-276.15|number:0}} °C</strong></p>
+                <h2 >{{m.dt*1000|date:'EEEE yy-dd-MM'}}</h2>
+                <p>temp min : <strong>{{m.temp.min}} °C</strong> || temp max : <strong>{{m.temp.max}} °C</strong></p>
+
             </a>
 
 
